--- a/gtk/theme/Adwaita/gtk-contained-dark.css
+++ b/gtk/theme/Adwaita/gtk-contained-dark.css
@@ -1603,7 +1603,8 @@ searchbar,
  ***************/
 .titlebar:not(headerbar),
 headerbar {
-  padding: 6px;
+  padding: 0 6px;
+  min-height: 46px;
   border-width: 0 0 1px;
   border-style: solid;
   border-color: #1c1f1f;
@@ -1918,12 +1919,14 @@ headerbar {
     border-radius: 0; }
   .default-decoration.titlebar:not(headerbar),
   headerbar.default-decoration {
-    padding: 4px; }
+    padding: 0 4px;
+    min-height: 36px; }
     .default-decoration.titlebar:not(headerbar) button,
     headerbar.default-decoration button,
     headerbar.default-decoration .titlebar button.titlebutton,
     .titlebar headerbar.default-decoration button.titlebutton {
-      padding: 5px; }
+      min-height: 26px;
+      padding: 0 5px; }
 
 .titlebar, .titlebar:backdrop {
   border-top-left-radius: 7px;
