--- a/gtk/theme/Adwaita/gtk-contained.css
+++ b/gtk/theme/Adwaita/gtk-contained.css
@@ -1607,7 +1607,8 @@ searchbar,
  ***************/
 .titlebar:not(headerbar),
 headerbar {
-  padding: 6px;
+  padding: 0 6px;
+  min-height: 46px;
   border-width: 0 0 1px;
   border-style: solid;
   border-color: #9d9d99;
@@ -1922,12 +1923,14 @@ headerbar {
     border-radius: 0; }
   .default-decoration.titlebar:not(headerbar),
   headerbar.default-decoration {
-    padding: 4px; }
+    padding: 0 4px;
+    min-height: 36px; }
     .default-decoration.titlebar:not(headerbar) button,
     headerbar.default-decoration button,
     headerbar.default-decoration .titlebar button.titlebutton,
     .titlebar headerbar.default-decoration button.titlebutton {
-      padding: 5px; }
+      min-height: 26px;
+      padding: 0 5px; }
 
 .titlebar, .titlebar:backdrop {
   border-top-left-radius: 7px;
